--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -37,7 +37,7 @@ var allProjects = await Astro.glob('../../work/projects/*/*.md')
             {
               category.items.map((item, i2) => {
                 var repoName = 'AdarshRKumar.dev'
-                var name = post.file
+                var name = item.file
                 var sw = `/home/runner/work/${repoName}/${repoName}/work/`
                 if (name.startsWith(sw)) name = name.slice(sw.length)
                 if (name.endsWith('.md')) name = name.slice(0, -1*'.md'.length)
