--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -10,6 +10,14 @@ var items = await Astro.glob('../../work/portfolio/*.md')
   <SiteGridContent classItems="portfolio wrap">
       {
         items.map((item, i2) => {
+          var repoName = 'AdarshRKumar.dev'
+          var name = item.file
+          var sw = `/home/runner/work/${repoName}/${repoName}/work/portfolio/`
+          if (name.startsWith(sw)) name = name.slice(sw.length)
+          if (name.endsWith('.md')) name = name.slice(0, -1*'.md'.length)
+
+          if (name.startsWith('_')) return ''
+
           var target = '_blank'
           var url = item.frontmatter.url
           if (url.startsWith('//')) url = `https:${url}`
