--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -13,7 +13,7 @@ var projects = [
     items: await Astro.glob('../../work/projects/games/*.md')
   },
   {
-    id: 'largeScale', 
+    id: 'large-scale', 
     name: 'Large Scale',
     items: await Astro.glob('../../work/projects/large-scale/*.md')
   },
@@ -38,7 +38,7 @@ var allProjects = await Astro.glob('../../work/projects/*/*.md')
               category.items.map((item, i2) => {
                 var repoName = 'AdarshRKumar.dev'
                 var name = item.file
-                var sw = `/home/runner/work/${repoName}/${repoName}/work/`
+                var sw = `/home/runner/work/${repoName}/${repoName}/work/projects/${category.id}`
                 if (name.startsWith(sw)) name = name.slice(sw.length)
                 if (name.endsWith('.md')) name = name.slice(0, -1*'.md'.length)
 
