--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -4,7 +4,7 @@ import '../styles/pages/portfolio.scss'
 import Layout from '../layouts/Layout.astro'
 import SiteGridContent from '../components/SiteGridContent.astro'
 
-var items = await Astro.glob('../../work/portfolio/*.md')
+var items = await Astro.glob('../../content/work/portfolio/*.md')
 ---
 <Layout title="Portfolio">
   <SiteGridContent classItems="portfolio wrap">
@@ -12,7 +12,7 @@ var items = await Astro.glob('../../work/portfolio/*.md')
         items.map((item, i2) => {
           var repoName = 'AdarshRKumar.dev'
           var name = item.file
-          var sw = `/home/runner/work/${repoName}/${repoName}/work/portfolio/`
+          var sw = `/home/runner/work/${repoName}/${repoName}/content/work/portfolio/`
           if (name.startsWith(sw)) name = name.slice(sw.length)
           if (name.endsWith('.md')) name = name.slice(0, -1*'.md'.length)
 
