--- a/src/pages/post/[id].astro
+++ b/src/pages/post/[id].astro
@@ -16,7 +16,7 @@ const { id } = Astro.params;
 
 import authors from '../../../content/blog/authors.js'
 
-var posts = await Astro.glob('../../../blog/posts/*.md')
+var posts = await Astro.glob('../../../content/blog/posts/*.md')
 var post = posts.find(post => post.file.includes(id))
 
 var authorUsername = post.frontmatter.author
