--- a/src/components/featuredArticles.astro
+++ b/src/components/featuredArticles.astro
@@ -13,7 +13,7 @@ var location = {
 }
 
 var highlights = ['Hello World!', 'NodeBooks']
-var allItems = await Astro.glob('../../blog/posts/*.md')
+var allItems = await Astro.glob('../../content/blog/posts/*.md')
 var posts = []
 
 highlights.forEach(name => {
