--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -160,7 +160,7 @@ img {
 .section, .hero {
     &:not(.ignorePadding) {
         padding-bottom: var(--pad);
-        > :not(.section-title):first-of-type {
+        > :not(.section-title, .hero *):first-of-type {
             padding-top: var(--pad);
         }
     }
