--- a/src/components/featuredArticles.astro
+++ b/src/components/featuredArticles.astro
@@ -20,19 +20,12 @@ highlights.forEach(name => {
   var res = allItems.filter(i => i.frontmatter.name === name)
   if (res) {
     if (res.length > 0) {
-      res.forEach(r => items.push(r))
+      res.forEach(r => posts.push(r))
     }
   }
 });
 ---
 <SiteGridContent classItems="posts">
-  {
-    <pre>
-      {
-        JSON.stringify(posts, null, 4)
-      }
-    </pre>
-  }
   {
     posts.map(function(post, i) {
       var repoName = 'AdarshRKumar.dev'
