--- a/src/components/featuredArticles.astro
+++ b/src/components/featuredArticles.astro
@@ -18,12 +18,12 @@ var posts = []
 
 highlights.forEach(name => {
   var res = allItems.filter(i => i.frontmatter.name === name)
+  console.log(res)
   if (res.length > 0) {
     res.forEach(r => posts.push(r))
   }
 });
 
-console.log(posts)
 ---
 <SiteGridContent classItems="posts">
   {
