--- a/src/components/featuredArticles.astro
+++ b/src/components/featuredArticles.astro
@@ -17,7 +17,7 @@ var allItems = await Astro.glob('../../content/blog/posts/*.md')
 var posts = []
 
 highlights.forEach(name => {
-  var res = allItems.filter(item => {console.log(item.frontmatter.name) return item.frontmatter.name === name})
+  var res = allItems.filter(item => {console.log(item.frontmatter.name); return item.frontmatter.name === name})
   // console.log(res)
   if (res.length > 0) {
     res.forEach(r => posts.push(r))
