--- a/src/components/featuredArticles.astro
+++ b/src/components/featuredArticles.astro
@@ -16,9 +16,8 @@ var highlights = ['Hello World!', 'NodeBooks']
 var allItems = await Astro.glob('../../content/blog/posts/*.md')
 var posts = []
 
-highlights.forEach(name => {
-  var res = allItems.filter(item => {console.log(item.frontmatter.name); return item.frontmatter.name === name})
-  // console.log(res)
+highlights.forEach(title => {
+  var res = allItems.filter(item => return item.frontmatter.title === title)
   if (res.length > 0) {
     res.forEach(r => posts.push(r))
   }
@@ -28,10 +27,10 @@ highlights.forEach(name => {
 <SiteGridContent classItems="posts">
   {
     posts.map(function(post, i) {
-      var repoName = 'AdarshRKumar.dev'
+      var repotitle = 'AdarshRKumar.dev'
 
       var slug = post.file
-      var sw = `/home/runner/work/${repoName}/${repoName}/blog/posts/`
+      var sw = `/home/runner/work/${repotitle}/${repotitle}/blog/posts/`
       if (slug.startsWith(sw)) slug = slug.slice(sw.length)
       if (slug.endsWith('.md')) slug = slug.slice(0, -1*'.md'.length)
 
