--- a/src/components/featuredArticles.astro
+++ b/src/components/featuredArticles.astro
@@ -17,7 +17,7 @@ var allItems = await Astro.glob('../../content/blog/posts/*.md')
 var posts = []
 
 highlights.forEach(title => {
-  var res = allItems.filter(item => return item.frontmatter.title === title)
+  var res = allItems.filter(item => item.frontmatter.title === title)
   if (res.length > 0) {
     res.forEach(r => posts.push(r))
   }
