--- a/src/components/featuredArticles.astro
+++ b/src/components/featuredArticles.astro
@@ -12,7 +12,7 @@ var location = {
   host: site, 
 }
 
-var highlights = ['Hello World!', 'NodeBooks']
+var highlights = ['Hello World!', 'Introducing NodeBooks']
 var allItems = await Astro.glob('../../content/blog/posts/*.md')
 var posts = []
 
