--- a/src/components/featuredArticles.astro
+++ b/src/components/featuredArticles.astro
@@ -30,7 +30,7 @@ highlights.forEach(title => {
       var repotitle = 'AdarshRKumar.dev'
 
       var slug = post.file
-      var sw = `/home/runner/work/${repotitle}/${repotitle}/blog/posts/`
+      var sw = `/home/runner/work/${repotitle}/${repotitle}/content/blog/posts/`
       if (slug.startsWith(sw)) slug = slug.slice(sw.length)
       if (slug.endsWith('.md')) slug = slug.slice(0, -1*'.md'.length)
 
