--- a/src/components/portfolioHighlights.astro
+++ b/src/components/portfolioHighlights.astro
@@ -3,7 +3,7 @@ import '../styles/pages/portfolio.scss'
 
 import SiteGridContent from './SiteGridContent.astro'
 
-var highlights = ['Graphics for Good', 'San Mateo County Astronomical Society']
+var highlights = ['TransTrack', 'Graphics for Good', 'San Mateo County Astronomical Society']
 var allItems = await Astro.glob('../../content/work/portfolio/*.md')
 var items = []
 
