--- a/src/components/featuredArticles.astro
+++ b/src/components/featuredArticles.astro
@@ -3,6 +3,8 @@ import SiteGridContent from '../components/SiteGridContent.astro'
 
 import Script from '../utils/script.astro'
 
+import getFName from '../../content/getFName.js'
+
 var site = Astro.site.toString()
 if (site.includes('://')) site = site.split('://')[1]
 if (site.endsWith('/')) site = site.slice(0, -1)
@@ -17,7 +19,7 @@ var allItems = await Astro.glob('../../content/blog/posts/*.md')
 var posts = []
 
 highlights.forEach(title => {
-  var res = allItems.filter(item => item.frontmatter.title === title)
+  var res = allItems.filter(item => getFName(item.title) === title)
   if (res.length > 0) {
     res.forEach(r => posts.push(r))
   }
@@ -27,12 +29,7 @@ highlights.forEach(title => {
 <SiteGridContent classItems="posts">
   {
     posts.map(function(post, i) {
-      var repotitle = 'AdarshRKumar.dev'
-
-      var slug = post.file
-      var sw = `/home/runner/work/${repotitle}/${repotitle}/content/blog/posts/`
-      if (slug.startsWith(sw)) slug = slug.slice(sw.length)
-      if (slug.endsWith('.md')) slug = slug.slice(0, -1*'.md'.length)
+      var slug = getFName(post.file)
 
       var image = {}
       var postUrl = `${location.protocol}//${location.host}/post/${slug}?hideHeader=true`
