--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -4,8 +4,9 @@ import '../styles/pages/projects.scss'
 import Layout from '../layouts/Layout.astro'
 import SiteGridContent from '../components/SiteGridContent.astro'
 
-var categories = [
-]
+import getFName from '../../content/getFName.js'
+
+var categories = []
 var projects = [
   {
     id: 'games', 
@@ -36,11 +37,7 @@ var allProjects = await Astro.glob('../../content/work/projects/*/*.md')
           <SiteGridContent classItems="wrap">
             {
               category.items.map((item, i2) => {
-                var repoName = 'AdarshRKumar.dev'
-                var name = item.file
-                var sw = `/home/runner/work/${repoName}/${repoName}/content/work/projects/${category.id}/`
-                if (name.startsWith(sw)) name = name.slice(sw.length)
-                if (name.endsWith('.md')) name = name.slice(0, -1*'.md'.length)
+                var name = getFName(item.file)
                 if (name.startsWith('_')) return ''
 
                 var target = '_blank'
