--- a/src/pages/photos.astro
+++ b/src/pages/photos.astro
@@ -13,7 +13,7 @@ var location = {
   host: site, 
 }
 
-var posts = await Astro.glob('../../content/allPhotos/*')
+var photos = await Astro.glob('../../content/allPhotos/*')
 ---
 <Layout title="Photos">
   <SiteGridContent classItems="photos">
