--- a/src/pages/photos.astro
+++ b/src/pages/photos.astro
@@ -18,7 +18,7 @@ var photos = await Astro.glob('../../content/allPhotos/*')
 <Layout title="Photos">
   <SiteGridContent classItems="photos">
     {
-      -photos.map(function(post, i) {
+      -photos.map(function(image, i) {
         return <img class="item" src={image.src || ''} alt={image.alt || ''} style={`--bg: url('${image.src || ''}')`} />
       })
     }
