--- a/src/pages/photos.astro
+++ b/src/pages/photos.astro
@@ -19,9 +19,11 @@ var photos = await Astro.glob('../../content/allPhotos/*/*')
   <SiteGridContent classItems="photos">
     {
       -photos.map(function(image, i) {
-        console.log(image)
-        return <pre>{JSON.stringify(image, null, 4)}</pre>
-        // return <img class="item" src={image.src || ''} alt={image.alt || ''} style={`--bg: url('${image.src || ''}')`} />
+        image = image.default
+        if (!img.src) {
+          return ''
+        }
+        return <img class="item" src={image.src || ''} alt={image.alt || ''} style={`--bg: url('${image.src || ''}')`} />
       })
     }
   </SiteGridContent>
