--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,7 +16,7 @@ var currentDate = {
   year: date.getFullYear(), 
 }
 
-let age = ''
+let age = 0
 if (
   (currentDate.month < dob.month) || 
   (
