--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,12 +40,13 @@ if (className.endsWith(' ')) className = className.substring(-1)
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{title}</title>
     <!-- <base href={Astro.site} /> -->
-    <link rel="icon" href="/assets/favicon.png">
+    <link rel="icon" href="/assets/favicon.png" />
+    <link rel="preload" href="/assets/placeholder.svg" />
     <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=625cc7f8cb9e7d001955b4a3&product=sop' async='async'></script>
     <Script name="settings" />
   </head>
