--- a/src/styles/components/liteGrid.scss
+++ b/src/styles/components/liteGrid.scss
@@ -1,38 +1,14 @@
 $min-size: 250px;
 $gap: 2rem;
-$padding: 1rem;
+$borderRadius : 1rem;
+$padding: 0.25rem;
+$min: 12rem;
 
 .grid.lite {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(0, 1fr)); /* Old Browsers (no "min()") */
-    grid-template-columns: repeat(auto-fill, minmax(min(0, 100%), 1fr)); /* New Browser (yes "min()")*/
+    grid-template-columns: repeat(auto-fill, minmax($min, 1fr)); /* Old Browsers (no "min()") */
+    grid-template-columns: repeat(auto-fill, minmax(min($min, 100%), 1fr)); /* New Browser (yes "min()")*/
     gap: $gap;
-
-    @for $i from 1 through 3 {
-        /* Only $i */
-        &:has(
-            .item:nth-last-child(n + #{$i}):nth-last-child(-n + #{$i}):first-child,
-            .item:nth-last-child(n + #{$i}):nth-last-child(-n + #{$i}):first-child ~ .item
-        ) {
-            grid-template-columns: repeat(#{$i + 2}, minmax(0, 1fr)); /* Old Browsers (no "min()") */
-            grid-template-columns: repeat(#{$i + 2}, minmax(min(0, 100%), 1fr)); /* New Browser (yes "min()")*/
-
-            .item {
-                &:first-child:not(:last-child) {
-                    grid-column: 2 / 3;
-                }
-                &:last-child:not(:first-child) {
-                    grid-column: -3 / -2;
-                }
-                &:first-child:last-child {
-                    grid-column: 2 / -2;
-                }
-                &:nth-child(2):not(:first-child, :last-child) {
-                    grid-column: 3 / -3;
-                }
-            }
-        }
-    }
 }
 
 .item {
@@ -44,7 +20,7 @@ $padding: 1rem;
     background: var(--middle-color);
     color: inherit;
 
-    border-radius: $gap;
+    border-radius: $borderRadius;
     
     display: flex;
     flex-direction: column;
@@ -54,21 +30,19 @@ $padding: 1rem;
     text-decoration: inherit;
 
     &__img {
-        width: 100%;
-        aspect-ratio: 1;
+        inline-size: 100%;
+        // block-size: 100%;
+        // aspect-ratio: 1;
 
         background-image: var(--placeholder, url('/assets/placeholder.svg'));
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
 
-        border-radius: #{$gap - $padding};
-    }
+        object-fit: cover;
+        object-position: center;
 
-    &__info {
-        overflow-x: hidden;
-        display: grid;
-        gap: $padding;
+        border-radius: #{$borderRadius - $padding};
     }
 
     &__info, &__title, &__content {
