--- a/src/styles/components/grid.scss
+++ b/src/styles/components/grid.scss
@@ -1,11 +1,11 @@
-$min-size: 250px;
 $gap: 2rem;
 $padding: 1rem;
+$min: 12rem;
 
 .grid:not(.lite) {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(0, 1fr)); /* Old Browsers (no "min()") */
-    grid-template-columns: repeat(auto-fill, minmax(min(0, 100%), 1fr)); /* New Browser (yes "min()")*/
+    grid-template-columns: repeat(auto-fill, minmax(var(--min, $min), 1fr)); /* Old Browsers (no "min()") */
+    grid-template-columns: repeat(auto-fill, minmax(min(var(--min, $min), 100%), 1fr)); /* New Browser (yes "min()")*/
     gap: $gap;
 
     @for $i from 1 through 3 {
