--- a/src/styles/components/liteGrid.scss
+++ b/src/styles/components/liteGrid.scss
@@ -1,13 +1,12 @@
-$min-size: 250px;
 $gap: 2rem;
 $borderRadius : 1rem;
-$padding: 0.25rem;
+$padding: 0.5rem;
 $min: 12rem;
 
 .grid.lite {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax($min, 1fr)); /* Old Browsers (no "min()") */
-    grid-template-columns: repeat(auto-fill, minmax(min($min, 100%), 1fr)); /* New Browser (yes "min()")*/
+    grid-template-columns: repeat(auto-fill, minmax(var(--min, $min), 1fr)); /* Old Browsers (no "min()") */
+    grid-template-columns: repeat(auto-fill, minmax(min(var(--min, $min), 100%), 1fr)); /* New Browser (yes "min()")*/
     gap: $gap;
 
     .item {
