--- a/src/styles/pages/photos.scss
+++ b/src/styles/pages/photos.scss
@@ -8,10 +8,10 @@ $textSpace: 5%;
         position: relative;
         pointer-events: all;
 
-        &:nth-child(12n) {
-            grid-column: span 2;
-            grid-row: span 2;
-        }
+        // &:nth-child(5n-3) {
+        //     grid-column: span 2;
+        //     grid-row: span 2;
+        // }
         
         &__image {
             -webkit-user-select: none;
